--- a/src/index.css
+++ b/src/index.css
@@ -157,7 +157,20 @@
   }
 
   .card-hover:hover {
-    @apply shadow-lg border-primary/40;
+    @apply shadow-lg border-primary/40 -translate-y-0.5;
+  }
+
+  /* Screen reader only class */
+  .sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
   }
 
   /* Enhanced metric display in case studies */
